# servizio-di-calcolo-della-impronta-SHA-256-di-file

./: CMakeLists.txt  LICENSE  README.md  Relazione_VR502999.docx
client/: client.c
common/: protocol.h
server/: server.c  sha256_utils.c  sha256_utils.h
